theme/style_base.css
/* ... */
#profile-list .rbprofile-list .profile-info h3.name a {
	white-space: nowrap;
	text-decoration: none;
	display: inline-block;
}

/* RBLinks */
.rblinks {
	clear: both;
	font-size: 13px;
	padding: 15px 0;
	overflow: hidden;
}
.rblinks .rbprint-download {
	float: left;
}
.rblinks .rbfavorites-castings {
	float: right;
}

/* Pagination */
.rbpagination { 
	float: left;
	clear: left;
	font-size: 13px;
}
.rbpagination > span, .rbpagination > a { 
	float: left;
	padding: 3px;
}

/* Profile Results Casting */
.favorite-casting {
	padding: 5px;
	overflow: hidden;
}
.favorite-casting .castingcart {
  float:right;
}
.favorite-casting .favorite {
  float:left;
}
.favorite-casting .castingcart a {
  width: 13px;
  height: 12px;
  display: inline-block;
  background: url(../style/icon-sprite.png) no-repeat;
}
.favorite-casting .castingcart a.saved_castingcart {
  background-position: 0 0;
}
.favorite-casting .castingcart a.save_castingcart {
  background-position: 0 -16px;
}
.favorite-casting .favorite a {
  width: 13px;
  height: 12px;
  display: inline-block;
  background: url(../style/icon-sprite.png) no-repeat;  
}
.favorite-casting .favorite a.save_favorite {
	background-position: 0 -48px;
}
.favorite-casting .favorite a.favorited {
  background-position: 0 -31px;
}

/* Search Forms */
.rbsearch-form .search-field {
	float: left;
	clear: both;
	width: 300px;
	border: none;
	padding: 7px 0;
}
.rbsearch-form .search-field.submit {
	padding: 15px 0;
}
.rbsearch-form .search-field.single label {
	width: 35%;
	float: left;
}
.rbsearch-form .search-field.single input,
.rbsearch-form .search-field.single select {
	margin: 0;
	width: 65%;
	float: left;
}
.rbsearch-form .search-field.single input,
.rbsearch-form .search-field.multi div input[type="text"] {
	padding: 5px;
}
.rbsearch-form .search-field.single select,
.rbsearch-form .search-field.multi div select {
	padding: 2px;
}
.rbsearch-form .search-field.multi legend {
	float: left;
	width: 100%;
	padding-bottom: 5px;
}
.rbsearch-form .search-field.multi label {
	float: left;
	width: auto;
	clear: both;
	line-height: normal;
}
.rbsearch-form .search-field.multi div {
	width: 48%;
	float: left;
}
.rbsearch-form .search-field.multi div:last-child {
	margin-left: 4%;
}
.rbsearch-form .search-field.multi div label {
	width: 40%;
	float: left;
	line-height: 28px;
	text-align: center;
}
.rbsearch-form .search-field.multi div input[type="text"],
.rbsearch-form .search-field.multi div select {
	margin: 0;
	width: 60%;
	float: left;
}
.rbsearch-form .search-field.multi label input[type="checkbox"],
.rbsearch-form .search-field.multi label input[type="radio"] {
	margin: 0;
	float: left;
}
.rbsearch-form .search-field.single label, .rbsearch-form .search-field.multi legend {
	font-weight: bold;
}

/* Widget Form */
.rb_agency_widget_showsearch .rbsearch-form .search-field {
	width: 100%;
}
.rb_agency_widget_showsearch .rbsearch-form .search-field.single label {
	width: 100%;
	float: none;
	display: block;
}
.rb_agency_widget_showsearch .rbsearch-form .search-field.single input[type="text"] {
	width: 100%;
	float: none;
	display: block;
}
.rb_agency_widget_showsearch .rbsearch-form .search-field.multi div label {
	width: 100%;
	float: none;
	display: block;
	text-align: right;
}
.rb_agency_widget_showsearch .rbsearch-form .search-field.multi div input[type="text"],
.rb_agency_widget_showsearch .rbsearch-form .search-field.multi div select {
	width: 100%;
	float: left;
}
.rb_agency_widget_showsearch .rbsearch-form .search-field.multi div input[type="text"] {
	text-align: right;
}

/* Dashboard */
#rbdashboard {
	overflow: hidden;
	margin-bottom: 60px;
}
#rbdashboard h1 {
	margin-bottom: 30px;
}
#rbdashboard h2 {
	margin-bottom: 15px;
}
#rbdashboard #profile-info {
	width: 30%;
	float: right;
}
#rbdashboard #profile-info h3 {
	margin-bottom: 15px;
}
#rbdashboard #profile-info h4 {
	padding: 10px 0 0 0;
}
#rbdashboard #profile-info ul {
	margin: 0;
	list-style: none;
}
#rbdashboard #profile-info ul li {
	list-style: none;
	padding: 5px 0;
}
#rbdashboard #search {
	width: 65%;
	float: left;
}
img.fillwidth {
	width: 100%;
	height: auto;
}
img.fillheight {
	height: 100%;
	width: auto;
	max-width: none!important;
}

/* Category List: /profile-category/ (view-category.php) */
#profile-category .standardTable { width: 100%; }
#profile-category h1.profile-category-title { }
#profile-category-list { font-size: 18px; overflow: hidden; }
#profile-category-list .profile-category { width: 310px; float: left; margin: 0 0 10px 0; }
#profile-category-list .profile-category .name { }
#profile-category-list .profile-category .name a { text-decoration: none; border-bottom: 1px solid #CDF; }
#profile-category-list .profile-category .name span.count { color: #999; padding-left: 5px; font-size: 17px; }

/* -Results */
#profile-category .profile-category-results-wrapper { vertical-align: top; width: 70%; }
#profile-category .profile-category-results-wrapper .agency-category-results { }

/* -Filter Profiles */
#profile-category .profile-category-filter-wrapper { vertical-align: top; width: 30%; }
.profile-category-filter { color: #111; padding: 10px; overflow: hidden; background: #e5e5e5; margin: 10px 0; }]
.profile-category-filter h4 { margin: 0; font-weight: bold; border-bottom: 3px solid #aaa; padding: 0 0 10px 0; }
.profile-category-filter .search-field { float: left; clear: both; border-bottom: 1px solid #aaa; padding: 5px 0; width: 100%; }
.profile-category-filter .search-field .label { margin: 0 0 5px 0; }
.profile-category-filter .search-field input[type="text"], .profile-category-filter .search-field label { float: left; }
.profile-category-filter .search-field .stubby { width: 80px; float: left; }
.profile-category-filter .search-field.double label { margin: 0 10px 0 10px; width: auto; padding: 0; border: none; }
.profile-category-filter .search-field label { width: 120px; text-align :right; padding: 0 10px 0 0; line-height: 22px; }
/* ... */

